@@ -73,7 +73,7 @@ DEFS = -DLIBDIR=\"$(libdir)\" @DEFS@
 INCLUDES = -I. -I$(srcdir) -I.. -I../intl -I$(top_srcdir)/intl
 
 
-all-local: @STDBOOL_H@
+all-local execute.lo javacomp.lo javaexec.lo pipe-bidi.lo pipe-in.lo pipe-out.lo progname.lo wait-process.lo xerror.lo: @STDBOOL_H@
 stdbool.h: stdbool.h.in
 	cp $(srcdir)/stdbool.h.in stdbool.h
 MOSTLYCLEANFILES = @STDBOOL_H@
