@@ -43,6 +43,10 @@
 #include "error.h"
 #include "libgettext.h"
 
+#ifndef EXIT_FAILURE
+# define EXIT_FAILURE 1
+#endif
+
 #ifndef STDIN_FILENO
 # define STDIN_FILENO 0
 #endif
