@@ -77,6 +77,10 @@
 #include "error.h"
 #include "libgettext.h"
 
+#ifndef EXIT_FAILURE
+# define EXIT_FAILURE 1
+#endif
+
 #define _(str) gettext (str)
 
 
