@@ -102,9 +102,9 @@ enum format_arg_type
   FAT_COUNT_LONGLONGINT_POINTER	= FAT_COUNT_POINTER | FAT_SIZE_LONGLONG,
   */
   /* Bitmasks */
-  FAT_SIZE_MASK		= (FAT_SIZE_SHORT | FAT_SIZE_CHAR \
-			   | FAT_SIZE_LONG | FAT_SIZE_LONGLONG \
-			   | FAT_SIZE_INTMAX_T | FAT_SIZE_SIZE_T \
+  FAT_SIZE_MASK		= (FAT_SIZE_SHORT | FAT_SIZE_CHAR
+			   | FAT_SIZE_LONG | FAT_SIZE_LONGLONG
+			   | FAT_SIZE_INTMAX_T | FAT_SIZE_SIZE_T
 			   | FAT_SIZE_PTRDIFF_T)
 };
 
